Cyrillic characters not exporting correctly in import/export - FIXED
With WPML search results listings for all languages - FIXED
In registration send password to email note removed when user allowed choose own password - FIXED
Menu save triggering rebuilding of category count and review counts - FIXED

v1.4.8
Send Enquiry & send to friend options removed from listings page - CHANGED
Add listing form upload image tool should not upload non-image files - FIXED
Added wp_filesystem checks for systems having problems with import/export - ADDED
Genesis theme update shows menu below top widget area - FIXED
Added filter to be able to stop add listing address from changing when moving map pin - ADDED
Better seo title and description for search results - CHANGED
Without filling mandatory fields click on save draft button keeps spinning - FIXED
Autozoom assigned only for more then map markers - CHANGED
Import/export integrated with franchise feature - ADDED
Import/export work with parent/child category - ADDED
Custom field with apostrophe sign not translated properly - FIXED
WPML not translating details page content correctly - FIXED
Google Analytics for owners stopped working due to API retirement, new improved Analytics added - FIXED
Category listing sort by rating now uses review count as second sort value - CHANGED
WPML copy content for translation no longer copying GD custom fields - FIXED
Function codeAddress changed to geodir_codeAddress for compatibility - CHANGED

v1.4.7
Search not working for empty keyword search - FIXED
Review counts lost during virtual page conversion (alos fixed by saving any place) - FIXED
Option added to allow/restrict some file types for custom field file upload - ADDED
Some DocBlocks added for documentation - ADDED

v1.4.6
New filter added for term link in popular category widget - ADDED
Validation added to avoid multiple times selection for same category - FIXED
Map ajax requests now specifically set to return utf-8 - CHANGED